# phantom-string-property

./: .travis.yml  CHANGELOG.md  README.md  phantom-string-property.cabal
app/: Main.lhs
doc/: Tutorial.md
src/Data/String/: Validate.hs
src/Data/String/Validate/: Char.hs  Class.hs  DSV.hs  FixedWidth.hs  Length.hs  LinesOf.hs  Regex.hs  Substring.hs
test/: Test.hs
