name:           phantom-string-property
version:        0.0.0
description:    Please see the README on GitHub at <https://github.com/nbloomf/phantom-string-property#readme>
homepage:       https://github.com/nbloomf/phantom-string-property#readme
bug-reports:    https://github.com/nbloomf/phantom-string-property/issues
author:         Nathan Bloomfield
maintainer:     nbloomf@gmail.com
copyright:      2018 Automattic, Inc.
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/nbloomf/phantom-string-property



library
  default-language: Haskell2010
  hs-source-dirs: src

  build-depends:
      base >=4.7 && <5

    , regex-pcre >=0.93.2 && <1.0

  exposed-modules:
    Data.String.Validate
    Data.String.Validate.Char
    Data.String.Validate.Class
    Data.String.Validate.FixedWidth
    Data.String.Validate.Length
    Data.String.Validate.LinesOf
    Data.String.Validate.Regex
    Data.String.Validate.Substring



executable phantom-string-property-example
  default-language: Haskell2010
  main-is: Main.lhs
  hs-source-dirs: app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , phantom-string-property



test-suite phantom-string-property-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test

  build-depends:
      base >=4.7 && <5
    , phantom-string-property

    , tasty >=1.1.0.2 && <1.2
    , tasty-quickcheck >=0.9.2 && <1.0
